Make dirty page tracking optional, and don't...
...create corrupted snapshots when dirty page metrics are
enabled.
* Plumb through track_dirty_pages into VM config
* Add another argument to control tracking dirty pages in
  resumed VMs
