# api_server/src/request/mod.rs
@@ -165,7 +165,8 @@ mod tests {
             "mem_size_mib": 128,
             "ht_enabled": false,
             "cpu_template": "Uninitialized",
-            "mem_file_path": "Uninitialized"
+            "mem_file_path": "Uninitialized",
+            "track_dirty_pages": false
         }"#;
         let vm_config_json: serde_json::Value = serde_json::from_str(vm_config_json).unwrap();
         assert_eq!(get_body(hyper_resp).unwrap(), vm_config_json);
